# notebook

./: .gitignore  Cargo.toml  README.md  justfile
content/: 2022-26-recent-books.md  broken-glass.md  feedback-loops.md  hemingways-trick.md  introduction.md
docs/: CNAME  index.html  introduction.html
docs/2022-26-recent-books/: index.html
docs/Introduction/: index.html
docs/broken-glass/: index.html
docs/css/: style.css
docs/feedback-loops/: index.html
docs/hemingways-trick/: index.html
docs/introduction/: index.html
docs/js/: wikipedia-preview.production.js
src/: arguments.rs  common.rs  frontmatter.rs  generator.rs  loader.rs  main.rs  parser.rs  post.rs  server.rs  system_time_ext.rs
templates/: index.html  post.html
