[package]
name = "notes"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = "0.5.6"
chrono = "0.4.19"
clap = { version = "3.1.8", features = ["derive"] }
minijinja = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.18.2", features = ["macros", "rt", "rt-multi-thread"] }
tower-http = { version = "0.3.3", features = ["fs", "trace", "set-header"] }
yaml-front-matter = "0.1.0"
